tests/int/use_command/snapshots/integration__int__use_command__flags__modules_nesting_flags_r_e_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - nesting
    - "-r"
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::inline_modules
crate::nesting::depth
crate::nesting::level1::depth
crate::nesting::level1::level2::depth

----- stderr -----
