tests/int/use_command/snapshots/integration__int__use_command__flags__modules_reexports_flags_e.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - reexports
    - "-e"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::nesting

----- stderr -----
