tests/int/use_command/snapshots/integration__int__use_command__flags__modules_reexports_flags_e_resolve-globs.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
    - "-e"
    - "--resolve-globs"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::nesting
crate::reexports::internal::Baz
crate::reexports::internal::Foo
crate::reexports::internal::INTERNAL_CONST_A
crate::reexports::internal::INTERNAL_CONST_B
crate::reexports::internal::InternalEnum
crate::reexports::internal::InternalTrait
crate::reexports::internal::Qux
crate::reexports::internal::Secret
crate::reexports::internal::internal_helper_1
crate::reexports::internal::internal_helper_2
crate::reexports::types::TYPE_CONST_1
crate::reexports::types::TYPE_CONST_2
crate::reexports::types::TypeA
crate::reexports::types::TypeB
crate::reexports::types::TypeC
crate::reexports::types::TypeContainer
crate::reexports::types::TypeD
crate::reexports::types::TypeE
crate::reexports::types::TypeTrait
crate::reexports::types::type_helper_a
crate::reexports::types::type_helper_b
crate::reexports::types::visibility_greet

----- stderr -----
