tests/int/use_command/snapshots/integration__int__use_command__flags__modules_reexports_flags_r.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - reexports
    - "-r"
---
success: true
exit_code: 0
----- stdout -----
crate::file_module
crate::item_visibility::PUB_STATIC
crate::nesting
crate::visibility

----- stderr -----
