tests/int/use_command/snapshots/integration__int__use_command__flags__modules_reexports_flags_r_e_grouped.snap
---
source: tests/int/use_command/flags.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/modules
    - use
    - reexports
    - "-r"
    - "-e"
    - "--grouped"
---
success: true
exit_code: 0
----- stdout -----
reexports
 - crate::file_module
 - crate::nesting
reexports::internal
 - crate::item_visibility::PUB_STATIC
reexports::types
 - crate::visibility

----- stderr -----
